Changed colour again...

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -78,7 +78,7 @@ header a {
 }
 
 .workout-details.completed .delete-btn {
-  background: #87ee87ad;
+  background: #147a10;
 }
 
 .workout-details h4 {
